--- a/index.html
+++ b/index.html
@@ -130,18 +130,18 @@ body {margin:0;height:2000px;}
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><h1>Souradeep Chakraborty</h1></span><br>
 	
-	  5th year PhD candidate<br>
+	  6th year PhD candidate<br>
 	  <a href="https://www.cs.stonybrook.edu/"><b> Department of Computer Science, Stony Brook University </b> </a><br>
 	  Email: aChakraborty@cs.stonybrook.edu, Mobile: +1-6317471244<br>
 	  
 	   <a href="https://SouradeepChakraborty95.github.io/Resume/CV_Souradeep_2023.pdf" style="color: #8D8988"><b>Resume</b> </a> • <a href="https://scholar.google.co.in/citations?user=Vtq1xfgAAAAJ&amp;hl=en" style="color: #8D8988"><b>Google Scholar</b> </a> • <a href="https://github.com/SouradeepChakraborty95" style="color: #8D8988"><b>Github</b></a>  • <a href="https://www.linkedin.com/in/Souradeep-Chakraborty-48222bb4/?originalSubdomain=in" style="color: #8D8988"><b>Linkedin</b> </a>
 	</td></tr></tbody></table>
 
-    <p>I am Research Assistant at Imagine lab under the supervision of <a href="https://prateekprasanna.com/"><b>Prof. Prateek Prasanna</b></a>. </p>
+    <p>I am a Research Assistant at Computer Vision lab under the supervision of <a href="https://prateekprasanna.com/"><b>Prof. Dimitris Samaras</b></a>. </p>
 
-    <p>Prior to joining SBU, I did my Bachelor in Technology (Btech) from the Institute of Engineering &amp; Management, Kolkata (India)  majoring in Electronics and Communication Engineering. During undergraduate, I had particularly worked on research problems like Scene Text Detection and Recognition, Handwriting Recognition, Writer Identification, Script Identification.</p> 
+    <p>Prior to joining SBU, I did my Bachelor in Technology (Btech) from the .. During undergraduate, I had particularly worked on research problems like..</p> 
 
-    <p> <font color="red"><b>Research Interest:</b></font> My research interests lie in computer vision and medical image analysis. In the recent past, my focus was on applying deep learning techniques to build predictive and prognostic models in various clinical domains. Currently I am working on designing efficient algorithms that can handle limited annotations and/or missing modalities. I am also interested in application of multi-modal data for medical vision. One such example is vision-language models.</p>
+    <p> <font color="red"><b>Research Interest:</b></font> My research interests lie in computer vision and .. In the recent past, my focus was on applying deep learning techniques to ... I am also interested in ...</p>
 
     <p><font color="red"><b>Coursework:</b></font> Data Science, Machine Learning, Computer Vision, HCI, Data Visualization</p>
   
