--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ body {margin:0;height:2000px;}
 	
 	  6th year PhD candidate<br>
 	  <a href="https://www.cs.stonybrook.edu/"><b> Department of Computer Science, Stony Brook University </b> </a><br>
-	  Email: aChakraborty@cs.stonybrook.edu, Mobile: +1-6317471244<br>
+	  Email: souchakrabor@cs.stonybrook.edu, Mobile: +1-6313206641<br>
 	  
 	   <a href="https://SouradeepChakraborty95.github.io/Resume/CV_Souradeep_2023.pdf" style="color: #8D8988"><b>Resume</b> </a> • <a href="https://scholar.google.co.in/citations?user=Vtq1xfgAAAAJ&amp;hl=en" style="color: #8D8988"><b>Google Scholar</b> </a> • <a href="https://github.com/SouradeepChakraborty95" style="color: #8D8988"><b>Github</b></a>  • <a href="https://www.linkedin.com/in/Souradeep-Chakraborty-48222bb4/?originalSubdomain=in" style="color: #8D8988"><b>Linkedin</b> </a>
 	</td></tr></tbody></table>
@@ -148,23 +148,16 @@ body {margin:0;height:2000px;}
   <p>&nbsp;</p>
     <h2>Recent News</h2>
     
-    <li><sup><font color="red"><b>NEW</b></font></sup> <b>08/2023</b>: 1 paper accepted to <a href="https://sites.google.com/view/mlmi2023">MICCAI workshop</a></li>
-    <li><sup><font color="red"><b>NEW</b></font></sup> <b>07/2023</b>: 1 paper accepted to <a href="https://iccv2023.thecvf.com/">ICCV</a></li>
-    <li><sup><font color="red"><b>NEW</b></font></sup> <b>07/2022</b>: 1 abstract accepted to <a href="https://www.rsna.org/">RSNA</a></li>
-    <li><sup><font color="red"><b>NEW</b></font></sup> <b>03/2022</b>: 1 paper accepted to <a href="https://cvpr2022.thecvf.com/">CVPR</a></li>
-    <li><sup><font color="red"></font></sup> <b>10/2021</b>: 1 paper accepted to <a href="https://spie.org/Publications/Proceedings/Volume/12033">SPIE Medical Imaging</a></li>
-    <li><sup><font color="red"></font></sup> <b>03/2021</b>: 1 paper accepted to <a href="https://2021.midl.io/">MIDL</a></li>
-    <li><sup><font color="red"></font></sup> <b>10/2019</b>: 1 paper accepted to <a href="https://www.2019.ieeeicassp.org/2019.ieeeicassp.org/index.html">ICASSP</a></li>
-    <li><sup><font color="red"></font></sup> <b>04/2018</b>: 3 papers accepted to <a href="http://www.icpr2018.org/">ICPR</a></li>
-    <li><sup><font color="red"></font></sup> <b>08/2018</b>: 1 paper accepted to <a href="https://www.journals.elsevier.com/pattern-recognition">Pattern Recognition</a></li>
-	<li><sup><font color="red"></font></sup> <b>05/2017</b>: 1 paper accepted to <a href="https://acpr2017.njust.edu.cn/">ACPR</a></li>
+    <li><sup><font color="red"><b>NEW</b></font></sup> <b>08/2023</b>: 1 paper accepted to <a href="">WACV</a></li>
+    <li><sup><font color="red"><b>NEW</b></font></sup> <b>07/2023</b>: 1 paper accepted to <a href="">IEEE Transactions on Multimedia </a></li>
+    <li><sup><font color="red"><b>NEW</b></font></sup> <b>07/2022</b>: 1 abstract accepted to <a href="">ISBI</a></li> 
+    <li><sup><font color="red"></font></sup> <b>05/2016</b>: 1 paper accepted to <a href="">CVIU</a></li>
+    <li><sup><font color="red"></font></sup> <b>08/2015</b>: 1 paper accepted to <a href="">JVCIR</a></li>
     
 	
-  
-  
-  
 
-  
+
+		 
   
   &nbsp;
 	  
@@ -181,7 +174,7 @@ body {margin:0;height:2000px;}
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Stony Brook University, USA</b></span>
 	
 	  <br><em>PhD in Computer Science &amp; Engineering</em><br> 
-          Aug 2019 - June 2024
+          Aug 2018 - December 2024
 
 	</td></tr></tbody></table>
 
@@ -191,10 +184,21 @@ body {margin:0;height:2000px;}
 
 	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/iem.png">
 
-	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Institute of Engineering &amp; Management, India</b></span>
+	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Indian Institute of Technology, Kharagpur, India</b></span>
 	
-	  <br><em>Btech in Electronics and Communication Engineering</em><br> 
-          Aug 2013 - June 2017
+	  <br><em>M.Tech in Electronics and Electrical Communication Engineering (Specialization: Visual Information Processing and Embedded Systems) </em><br> 
+          Aug 2013 - June 2015
+
+	</td></tr></tbody></table>
+		 
+  <table border="0" cellpadding="0" cellspacing="4">
+
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/iem.png">
+
+	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>National Institute of Technology, Durgapur, India</b></span>
+	
+	  <br><em>B.Tech in Electronics and Communication Engineering</em><br> 
+          Aug 2008 - June 2012
 
 	</td></tr></tbody></table>
 		
