--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@ body {margin:0;height:2000px;}
 	</td></tr></tbody></table>
 
   <p></p>
+		 
     <h2 style="display:inline;">Industry</h2>
     <!--<div style="top:-10px; position:relative;">-->
 	<p></p>
@@ -239,9 +240,9 @@ body {margin:0;height:2000px;}
 
 	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/sri.png">
 
-	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>SRI International, USA</b></span>
+	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Amazon, USA</b></span>
 	
-	  <br><em>Deep Learning Research Intern </em><br> 
+	  <br><em>Applied Scientist Intern </em><br> 
 	  May 2023 - August 2023
 	  
 	</td></tr></tbody></table>
@@ -250,21 +251,43 @@ body {margin:0;height:2000px;}
 
 	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/roche.jpg">
 
-	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Roche, USA</b></span>
+	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Amazon, USA</b></span>
 	
-	  <br><em>Advanced ML Research Intern </em><br> 
-	  May 2022 - August 2022 
+	  <br><em>Applied Scientist Intern </em><br> 
+	  May 2022 - October 2022 
 	  
 	</td></tr></tbody></table>
+
+	<table border="0" cellpadding="0" cellspacing="4">
+
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/cts.png">
+
+	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>IISc Bangalore, India</b></span>
 	
+	  <br><em>Project research assistant </em><br> 
+	  November 2015 - June 2016 
+	  
+	</td></tr></tbody></table>
+		 
   	<table border="0" cellpadding="0" cellspacing="4">
 
 	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/cts.png">
 
-	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Cognizant, India</b></span>
+	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Cerner Healthcare Pvt. Ltd., India</b></span>
 	
-	  <br><em>Datawarehouse developer </em><br> 
-	  Dec 2017 - July 2019 
+	  <br><em>Software Engineer </em><br> 
+	  May 2015 - October 2015 
+	  
+	</td></tr></tbody></table>
+
+         <table border="0" cellpadding="0" cellspacing="4">
+
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/cts.png">
+
+	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Samsung Research Institute, Bangalore, India</b></span>
+	
+	  <br><em>Software Engineer </em><br> 
+	  July 2012 - July 2013 
 	  
 	</td></tr></tbody></table>
 
