--- a/index.html
+++ b/index.html
@@ -184,6 +184,17 @@ body {margin:0;height:2000px;}
 
 	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/iem.png">
 
+	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>University of California Santa Barbara, USA</b></span>
+	
+	  <br><em>M.Sc in Electrical and Computer Engineering </em><br> 
+          Sept 2016 - June 2018
+
+	</td></tr></tbody></table>
+		 
+  <table border="0" cellpadding="0" cellspacing="4">
+
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/iem.png">
+
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Indian Institute of Technology, Kharagpur, India</b></span>
 	
 	  <br><em>M.Tech in Electronics and Electrical Communication Engineering (Specialization: Visual Information Processing and Embedded Systems) </em><br> 
@@ -258,14 +269,6 @@ body {margin:0;height:2000px;}
 	  
 	</td></tr></tbody></table>
 
-	<table border="0" cellpadding="0" cellspacing="4">
-
-	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/cts.png">
-
-	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>IISc Bangalore, India</b></span>
-	
-	  <br><em>Project research assistant </em><br> 
-	  November 2015 - June 2016 
 	  
 	</td></tr></tbody></table>
 		 
@@ -361,6 +364,34 @@ frequency statistics</strong>
   </td>
 </tr>
 
+<tr>
+  <td>
+    <img border="0" src="./Souradeep Chakraborty_files/iccv23.PNG" classs="publogo" height="180" width="200">
+  </td>
+  <td>
+    <div class="publication">
+    <p><strong style="color:#65696C;"> A dense subgraph based algorithm for compact salient image region detection</strong>
+    <br><b> Souradeep Chakraborty</b>, Pabitra Mitra
+    <br><b><em>Computer Vision and Image Understanding, Elsevier, Vol. 145, April 2016, pp. 1-14</b>
+    <br><a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Chakraborty_Enhancing_Modality-Agnostic_Representations_via_Meta-Learning_for_Brain_Tumor_Segmentation_ICCV_2023_paper.pdf">[paper]</a>
+    </p></div>
+  </td>
+</tr>
+
+<tr>
+  <td>
+    <img border="0" src="./Souradeep Chakraborty_files/iccv23.PNG" classs="publogo" height="180" width="200">
+  </td>
+  <td>
+    <div class="publication">
+    <p><strong style="color:#65696C;"> A site entropy rate and degree centrality based algorithm for image co-segmentation</strong>
+    <br><b> Souradeep Chakraborty</b>, Pabitra Mitra
+    <br><b><em>Journal of Visual Communication and Image \newline Representation, Elsevier, Vol. 33, Nov. 2015, pp. 20-30</b>
+    <br><a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Chakraborty_Enhancing_Modality-Agnostic_Representations_via_Meta-Learning_for_Brain_Tumor_Segmentation_ICCV_2023_paper.pdf">[paper]</a>
+    </p></div>
+  </td>
+</tr>
+	   
   </tbody></table>
   
   
