--- a/index.html
+++ b/index.html
@@ -391,6 +391,34 @@ frequency statistics</strong>
     </p></div>
   </td>
 </tr>
+
+<tr>
+  <td>
+    <img border="0" src="./Souradeep Chakraborty_files/iccv23.PNG" classs="publogo" height="180" width="200">
+  </td>
+  <td>
+    <div class="publication">
+    <p><strong style="color:#65696C;"> Image colourisation using deep feature-guided image retrieval</strong>
+    <br><b> Souradeep Chakraborty</b>
+    <br><b><em>IET Image Processing</b>
+    <br><a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Chakraborty_Enhancing_Modality-Agnostic_Representations_via_Meta-Learning_for_Brain_Tumor_Segmentation_ICCV_2023_paper.pdf">[paper]</a>
+    </p></div>
+  </td>
+</tr>
+
+<tr>
+  <td>
+    <img border="0" src="./Souradeep Chakraborty_files/iccv23.PNG" classs="publogo" height="180" width="200">
+  </td>
+  <td>
+    <div class="publication">
+    <p><strong style="color:#65696C;"> Deep image inpainting with region prediction at hierarchical scales</strong>
+    <br><b> Souradeep Chakraborty</b>, Jogendra N. Kundu, and Ramesh Venkatesh Babu
+    <br><b><em>ICVGIP 2016</b>
+    <br><a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Chakraborty_Enhancing_Modality-Agnostic_Representations_via_Meta-Learning_for_Brain_Tumor_Segmentation_ICCV_2023_paper.pdf">[paper]</a>
+    </p></div>
+  </td>
+</tr>
 	   
   </tbody></table>
   
