--- a/index.html
+++ b/index.html
@@ -148,11 +148,12 @@ body {margin:0;height:2000px;}
   <p>&nbsp;</p>
     <h2>Recent News</h2>
     
-    <li><sup><font color="red"><b>NEW</b></font></sup> <b>08/2023</b>: 1 paper accepted to <a href="">WACV</a></li>
-    <li><sup><font color="red"><b>NEW</b></font></sup> <b>07/2023</b>: 1 paper accepted to <a href="">IEEE Transactions on Multimedia </a></li>
-    <li><sup><font color="red"><b>NEW</b></font></sup> <b>07/2022</b>: 1 abstract accepted to <a href="">ISBI</a></li> 
-    <li><sup><font color="red"></font></sup> <b>05/2016</b>: 1 paper accepted to <a href="">CVIU</a></li>
-    <li><sup><font color="red"></font></sup> <b>08/2015</b>: 1 paper accepted to <a href="">JVCIR</a></li>
+    <li><sup><font color="red"><b>NEW</b></font></sup> <b>08/2023</b>: 1 paper accepted to <a href="">IEEE WACV</a></li>
+    <li><sup><font color="red"><b>NEW</b></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="">IEEE Transactions on Multimedia </a></li>
+    <li><sup><font color="red"><b>NEW</b></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="">IEEE ISBI</a></li>
+    <li><sup><font color="red"><b>NEW</b></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="">MICCAI Workshop (MOVI)</a></li> 
+    <li><sup><font color="red"></font></sup> <b>05/2016</b>: 1 paper accepted to <a href="">Computer Vision and Image Understanding (CVIU)</a></li>
+    <li><sup><font color="red"></font></sup> <b>08/2015</b>: 1 paper accepted to <a href="">Journal of Visual Communication and Image Representation (JVCIR)</a></li>
     
 	
 
