--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@ body {margin:0;height:2000px;}
 	  <a href="https://www.cs.stonybrook.edu/"><b> Department of Computer Science, Stony Brook University </b> </a><br>
 	  Email: souchakrabor@cs.stonybrook.edu, Mobile: +1-6313206641<br>
 	  
-	   <a href="https://SouradeepChakraborty95.github.io/Resume/CV_Souradeep_2023.pdf" style="color: #8D8988"><b>Resume</b> </a> • <a href="https://scholar.google.co.in/citations?user=Vtq1xfgAAAAJ&amp;hl=en" style="color: #8D8988"><b>Google Scholar</b> </a> • <a href="https://github.com/SouradeepChakraborty95" style="color: #8D8988"><b>Github</b></a>  • <a href="https://www.linkedin.com/in/Souradeep-Chakraborty-48222bb4/?originalSubdomain=in" style="color: #8D8988"><b>Linkedin</b> </a>
+	   <a href="https://sourachakra.github.io/Resume/CV_Souradeep_2023.pdf" style="color: #8D8988"><b>Resume</b> </a> • <a href="https://scholar.google.com/citations?user=ArQ0ruYAAAAJ&hl=en" style="color: #8D8988"><b>Google Scholar</b> </a> • <a href="https://github.com/sourachakra" style="color: #8D8988"><b>Github</b></a>  • <a href="https://www.linkedin.com/in/souradeep-chakraborty/" style="color: #8D8988"><b>Linkedin</b> </a>
 	</td></tr></tbody></table>
 
-    <p>I am a Research Assistant at Computer Vision lab under the supervision of <a href="https://prateekprasanna.com/"><b>Prof. Dimitris Samaras</b></a>. </p>
+    <p>I am a Research Assistant at Computer Vision lab under the supervision of <a href="https://www.cs.stonybrook.edu/people/faculty/dimitrissamaras"><b>Prof. Dimitris Samaras</b></a>. </p>
 
     <p>Prior to joining SBU, I did my Bachelor in Technology (Btech) from the .. During undergraduate, I had particularly worked on research problems like..</p> 
 
