--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@ body {margin:0;height:2000px;}
     <li><sup><font color="red"><b>NEW</b></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="">IEEE Transactions on Multimedia </a></li>
     <li><sup><font color="red"><b>NEW</b></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="">IEEE ISBI</a></li>
     <li><sup><font color="red"><b>NEW</b></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="">MICCAI Workshop (MOVI)</a></li> 
-    <li><sup><font color="red"></font></sup> <b>05/2016</b>: 1 paper accepted to <a href="">Computer Vision and Image Understanding (CVIU)</a></li>
-    <li><sup><font color="red"></font></sup> <b>08/2015</b>: 1 paper accepted to <a href="">Journal of Visual Communication and Image Representation (JVCIR)</a></li>
+    <li><sup><font color="red"></font></sup> <b>05/2016</b>: 1 paper accepted to <a href="">Computer Vision and Image Understanding</a></li>
+    <li><sup><font color="red"></font></sup> <b>08/2015</b>: 1 paper accepted to <a href="">Journal of Visual Communication and Image Representation</a></li>
     
 	
 
