--- a/index.html
+++ b/index.html
@@ -219,14 +219,36 @@ body {margin:0;height:2000px;}
     <h2 style="display:inline;">Research Experiences</h2>
     <!--<div style="top:-10px; position:relative;">-->
 	<p></p>
+
+	<table border="0" cellpadding="0" cellspacing="4">
+
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/isi.png">
+
+	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Stony Brook University, USAa</b></span>
 	
+	  <br><em> Under <a href=https://www.cs.stonybrook.edu/people/faculty/dimitrissamaras"><b>Prof. Dimitris Samaras</b></a> </em><br> 
+	  May 2019 - Present <a href="" style="color: #000000"><b>[Certificate]</b> </a>
+	  
+	</td></tr></tbody></table>
+		 
+	<table border="0" cellpadding="0" cellspacing="4">
+
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/isi.png">
+
+	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>University of California Santa Barbara, USAa</b></span>
+	
+	  <br><em> Under <a href="https://engineering.ucsb.edu/people/yon-visell"><b>Prof. Yon Visell</b></a> </em><br> 
+	  Sept 2016 - May 2018 <a href="https://SouradeepChakraborty95.github.io/images/isicert.pdf" style="color: #000000"><b>[Certificate]</b> </a>
+	  
+	</td></tr></tbody></table>
+		 
   	<table border="0" cellpadding="0" cellspacing="4">
 
 	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/isi.png">
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Indian Statistical Institute, Kolkata, India</b></span>
 	
-	  <br><em> Under <a href="https://www.isical.ac.in/~umapada/"><b>Prof. Shankar K. Pal</b></a> </em><br> 
+	  <br><em> Under <a href="https://www.isical.ac.in/~sankar/"><b>Prof. Sankar K. Pal</b></a> </em><br> 
 	  Sept 2010 - Sept 2011 <a href="https://SouradeepChakraborty95.github.io/images/isicert.pdf" style="color: #000000"><b>[Certificate]</b> </a>
 	  
 	</td></tr></tbody></table>
@@ -238,7 +260,7 @@ body {margin:0;height:2000px;}
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Indian Institute of Technology Kharagpur, India</b></span>
 	
-	  <br><em>Under <a href="https://www.iitr.ac.in/~CSE/Partha_Pratim_Roy"><b>Prof. Pabitra Mitra</b></a></em><br>
+	  <br><em>Under <a href="https://scholar.google.com/citations?user=5bXSZPYAAAAJ&hl=en"><b>Prof. Pabitra Mitra</b></a></em><br>
 	  Sept 2017 - March 2018 <a href="https://SouradeepChakraborty95.github.io/images/iitrcert.pdf" style="color: #000000"><b>[Certificate]</b> </a>
 	</td></tr></tbody></table>
 
@@ -288,7 +310,7 @@ body {margin:0;height:2000px;}
 
 	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/cts.png">
 
-	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Samsung Research Institute, Bangalore, India</b></span>
+	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Samsung Electronics, India</b></span>
 	
 	  <br><em>Software Engineer </em><br> 
 	  July 2012 - July 2013 
