--- a/index.html
+++ b/index.html
@@ -137,13 +137,15 @@ body {margin:0;height:2000px;}
 	   <a href="https://sourachakra.github.io/Resume/CV_Souradeep_2023.pdf" style="color: #8D8988"><b>Resume</b> </a> • <a href="https://scholar.google.com/citations?user=ArQ0ruYAAAAJ&hl=en" style="color: #8D8988"><b>Google Scholar</b> </a> • <a href="https://github.com/sourachakra" style="color: #8D8988"><b>Github</b></a>  • <a href="https://www.linkedin.com/in/souradeep-chakraborty/" style="color: #8D8988"><b>Linkedin</b> </a>
 	</td></tr></tbody></table>
 
-    <p>I am a Research Assistant at Computer Vision lab under the supervision of <a href="https://www.cs.stonybrook.edu/people/faculty/dimitrissamaras"><b>Prof. Dimitris Samaras</b></a>. </p>
+    <p>I am a Research Assistant at the <a href="https://www3.cs.stonybrook.edu/~cvl/">Computer Vision (CV) lab </a> at Stony Brook University under the supervision of <a href="https://www.cs.stonybrook.edu/people/faculty/dimitrissamaras"><b>Prof. Dimitris Samaras</b></a>. </p>
 
-    <p>Prior to joining SBU, I did my Bachelor in Technology (Btech) from the .. During undergraduate, I had particularly worked on research problems like..</p> 
+    <p>Prior to joining SBU, I completed Masters degree from UC Santa Barbara, USA and Indian Institute of Technology (IIT) Kharagpur, India in the domain of signal processing. I completed by undergraduate degree from National Institute of Technology (NIT) Durgapura, India in Electronics and Communication Engineering.</p> 
 
-    <p> <font color="red"><b>Research Interest:</b></font> My research interests lie in computer vision and .. In the recent past, my focus was on applying deep learning techniques to ... I am also interested in ...</p>
+    <p> <font color="red"><b>Research Interest:</b></font> My research interests lie in computer vision and machine learning in general. In the recent past, my focus was on studying and predicting human visual attention. In the recent past, I have worked on predicting human visual attention on different kinds of images including but not limited to natural images, webpages, graphic designs, whole slide images of cancer tissues, etc. 
+	    Currently, I work in the area of digital pathology, with additional interests in the domain of
+    self-supervised learning.</p>
 
-    <p><font color="red"><b>Coursework:</b></font> Data Science, Machine Learning, Computer Vision, HCI, Data Visualization</p>
+    <p><font color="red"><b>Coursework:</b></font> Machine Learning, Computer Vision, Data Visualization, Computer Graphics, Algorithms</p>
   
   <p>&nbsp;</p>
     <h2>Recent News</h2>
