--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@ body {margin:0;height:2000px;}
 
     <p>I am a Research Assistant at the <a href="https://www3.cs.stonybrook.edu/~cvl/">Computer Vision (CV) lab </a> at Stony Brook University under the supervision of <a href="https://www.cs.stonybrook.edu/people/faculty/dimitrissamaras"><b>Prof. Dimitris Samaras</b></a>. </p>
 
-    <p>Prior to joining SBU, I completed Masters degree from UC Santa Barbara, USA and Indian Institute of Technology (IIT) Kharagpur, India in the domain of signal processing. I completed by undergraduate degree from National Institute of Technology (NIT) Durgapura, India in Electronics and Communication Engineering.</p> 
+    <p>Prior to joining SBU, I completed Masters degree from UC Santa Barbara, USA and Indian Institute of Technology (IIT) Kharagpur, India in the domain of signal processing. I completed by undergraduate degree from National Institute of Technology (NIT) Durgapur, India in Electronics and Communication Engineering.</p> 
 
-    <p> <font color="red"><b>Research Interest:</b></font> My research interests lie in computer vision and machine learning in general. In the recent past, my focus was on studying and predicting human visual attention. In the recent past, I have worked on predicting human visual attention on different kinds of images including but not limited to natural images, webpages, graphic designs, whole slide images of cancer tissues, etc. 
+    <p> <font color="red"><b>Research Interest:</b></font> My research interests lie in computer vision and machine learning in general. In the recent past, my focus has been on studying and predicting human visual attention. In the recent past, I have worked on predicting human visual attention on different kinds of images including but not limited to natural images, webpages, graphic designs, whole slide images of cancer tissues, etc. 
 	    Currently, I work in the area of digital pathology, with additional interests in the domain of
     self-supervised learning.</p>
 
@@ -226,7 +226,7 @@ body {margin:0;height:2000px;}
 
 	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/isi.png">
 
-	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Stony Brook University, USAa</b></span>
+	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Stony Brook University, USA</b></span>
 	
 	  <br><em> Under <a href=https://www.cs.stonybrook.edu/people/faculty/dimitrissamaras"><b>Prof. Dimitris Samaras</b></a> </em><br> 
 	  May 2019 - Present <a href="" style="color: #000000"><b>[Certificate]</b> </a>
@@ -237,9 +237,20 @@ body {margin:0;height:2000px;}
 
 	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/isi.png">
 
-	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>University of California Santa Barbara, USAa</b></span>
+	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>University of California Santa Barbara, USA</b></span>
 	
 	  <br><em> Under <a href="https://engineering.ucsb.edu/people/yon-visell"><b>Prof. Yon Visell</b></a> </em><br> 
+	  Sept 2016 - May 2018 <a href="https://SouradeepChakraborty95.github.io/images/isicert.pdf" style="color: #000000"><b>[Certificate]</b> </a>
+	  
+	</td></tr></tbody></table>
+
+	<table border="0" cellpadding="0" cellspacing="4">
+
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/isi.png">
+
+	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Indian Institute of Science, Bangalore, India</b></span>
+	
+	  <br><em> Under <a href="https://cds.iisc.ac.in/faculty/venky/"><b>Prof. R. Venkatesh Babu</b></a> </em><br> 
 	  Sept 2016 - May 2018 <a href="https://SouradeepChakraborty95.github.io/images/isicert.pdf" style="color: #000000"><b>[Certificate]</b> </a>
 	  
 	</td></tr></tbody></table>
@@ -438,7 +449,7 @@ frequency statistics</strong>
   <td>
     <div class="publication">
     <p><strong style="color:#65696C;"> Deep image inpainting with region prediction at hierarchical scales</strong>
-    <br><b> Souradeep Chakraborty</b>, Jogendra N. Kundu, and Ramesh Venkatesh Babu
+    <br><b> Souradeep Chakraborty</b>, Jogendra N. Kundu, and R. Venkatesh Babu
     <br><b><em>ICVGIP 2016</b>
     <br><a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Chakraborty_Enhancing_Modality-Agnostic_Representations_via_Meta-Learning_for_Brain_Tumor_Segmentation_ICCV_2023_paper.pdf">[paper]</a>
     </p></div>
