--- a/index.html
+++ b/index.html
@@ -181,7 +181,6 @@ body {margin:0;height:2000px;}
 
 	</td></tr></tbody></table>
 
-  <p></p>
 
   <table border="0" cellpadding="0" cellspacing="4">
 
@@ -251,7 +250,7 @@ body {margin:0;height:2000px;}
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Indian Institute of Science, Bangalore, India</b></span>
 	
 	  <br><em> Under <a href="https://cds.iisc.ac.in/faculty/venky/"><b>Prof. R. Venkatesh Babu</b></a> </em><br> 
-	  Sept 2016 - May 2018 <a href="https://SouradeepChakraborty95.github.io/images/isicert.pdf" style="color: #000000"><b>[Certificate]</b> </a>
+	  November 2015 - May 2016 <a href="https://SouradeepChakraborty95.github.io/images/isicert.pdf" style="color: #000000"><b>[Certificate]</b> </a>
 	  
 	</td></tr></tbody></table>
 		 
@@ -262,11 +261,11 @@ body {margin:0;height:2000px;}
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Indian Statistical Institute, Kolkata, India</b></span>
 	
 	  <br><em> Under <a href="https://www.isical.ac.in/~sankar/"><b>Prof. Sankar K. Pal</b></a> </em><br> 
-	  Sept 2010 - Sept 2011 <a href="https://SouradeepChakraborty95.github.io/images/isicert.pdf" style="color: #000000"><b>[Certificate]</b> </a>
+	  May 2010 - July 2011 <a href="https://SouradeepChakraborty95.github.io/images/isicert.pdf" style="color: #000000"><b>[Certificate]</b> </a>
 	  
 	</td></tr></tbody></table>
 
-		<p></p>
+	
 	<table border="0" cellpadding="0" cellspacing="4">
 
 	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/iitr.png">
@@ -274,7 +273,7 @@ body {margin:0;height:2000px;}
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Indian Institute of Technology Kharagpur, India</b></span>
 	
 	  <br><em>Under <a href="https://scholar.google.com/citations?user=5bXSZPYAAAAJ&hl=en"><b>Prof. Pabitra Mitra</b></a></em><br>
-	  Sept 2017 - March 2018 <a href="https://SouradeepChakraborty95.github.io/images/iitrcert.pdf" style="color: #000000"><b>[Certificate]</b> </a>
+	  June 2013 - April 2015 <a href="https://SouradeepChakraborty95.github.io/images/iitrcert.pdf" style="color: #000000"><b>[Certificate]</b> </a>
 	</td></tr></tbody></table>
 
   <p></p>
@@ -353,7 +352,7 @@ body {margin:0;height:2000px;}
 frequency statistics</strong>
     <br><b> Souradeep Chakraborty</b>, Shujon Naha, Muhammet Bastan, Amit Kumar K C, Dimitris Samaras
     <br><b><em>IEEE Winter Conference on Applications of Computer Vision (WACV),</em> 2024.</b>
-    <br><a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Chakraborty_Enhancing_Modality-Agnostic_Representations_via_Meta-Learning_for_Brain_Tumor_Segmentation_ICCV_2023_paper.pdf">[paper]</a>
+    <br><a href="https://openaccess.thecvf.com/content/WACV2024/papers/Chakraborty_Unsupervised_and_Semi-Supervised_Co-Salient_Object_Detection_via_Segmentation_Frequency_Statistics_WACV_2024_paper.pdf">[paper]</a>
     </p></div>
   </td>
 </tr>
@@ -367,7 +366,7 @@ frequency statistics</strong>
     <p><strong style="color:#65696C;"> Predicting visual attention in different graphic design documents</strong>
     <br><b> Souradeep Chakraborty</b>, Zijun Wei, Conor Kelton, Seoyoung Ahn, Aruna Balasubramanian, Gregory Zelinsky, Dimitris Samaras
     <br><b><em>IEEE Transactions on Multimedia,</em> 2022.</b>
-    <br><a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Chakraborty_Enhancing_Modality-Agnostic_Representations_via_Meta-Learning_for_Brain_Tumor_Segmentation_ICCV_2023_paper.pdf">[paper]</a>
+    <br><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9779948&casa_token=pOavLF6cqf4AAAAA:Djy0DSo2KR2pCoR5je97QaGJCRt4Z5Y6iD6QpggZfyb_g4U7sSYaH5jO4FjHWW64kDRVxLSX4H0&tag=1">[paper]</a>
     </p></div>
   </td>
 </tr>
@@ -381,7 +380,7 @@ frequency statistics</strong>
     <p><strong style="color:#65696C;"> Visual attention analysis of pathologists examining whole slide images of Prostate cancer</strong>
     <br><b> Souradeep Chakraborty</b>, Ke Ma, Rajarsi  Gupta, Beatrice Knudsen, Joel Saltz, Gregory Zelinsky, Dimitris Samaras
     <br><b><em>IEEE  International Symposium on Biomedical Imaging (ISBI)  2022.</b>
-    <br><a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Chakraborty_Enhancing_Modality-Agnostic_Representations_via_Meta-Learning_for_Brain_Tumor_Segmentation_ICCV_2023_paper.pdf">[paper]</a>
+    <br><a href="https://arxiv.org/pdf/2202.08437.pdf">[paper]</a>
     </p></div>
   </td>
 </tr>
@@ -395,7 +394,7 @@ frequency statistics</strong>
     <p><strong style="color:#65696C;"> Weighting the factors affecting attention guidance during free viewing and visual search: The unexpected role of object recognition uncertainty</strong>
     <br><b> Souradeep Chakraborty</b>, Gregory Zelinsky, Dimitris Samaras
     <br><b><em>Journal of vision, 22(4), 13-13.</b>
-    <br><a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Chakraborty_Enhancing_Modality-Agnostic_Representations_via_Meta-Learning_for_Brain_Tumor_Segmentation_ICCV_2023_paper.pdf">[paper]</a>
+    <br><a href="https://jov.arvojournals.org/article.aspx?articleid=2778692">[paper]</a>
     </p></div>
   </td>
 </tr>
@@ -409,7 +408,7 @@ frequency statistics</strong>
     <p><strong style="color:#65696C;"> A dense subgraph based algorithm for compact salient image region detection</strong>
     <br><b> Souradeep Chakraborty</b>, Pabitra Mitra
     <br><b><em>Computer Vision and Image Understanding, Elsevier, Vol. 145, April 2016, pp. 1-14</b>
-    <br><a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Chakraborty_Enhancing_Modality-Agnostic_Representations_via_Meta-Learning_for_Brain_Tumor_Segmentation_ICCV_2023_paper.pdf">[paper]</a>
+    <br><a href="https://arxiv.org/pdf/1511.06545.pdf">[paper]</a>
     </p></div>
   </td>
 </tr>
@@ -423,7 +422,7 @@ frequency statistics</strong>
     <p><strong style="color:#65696C;"> A site entropy rate and degree centrality based algorithm for image co-segmentation</strong>
     <br><b> Souradeep Chakraborty</b>, Pabitra Mitra
     <br><b><em>Journal of Visual Communication and Image \newline Representation, Elsevier, Vol. 33, Nov. 2015, pp. 20-30</b>
-    <br><a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Chakraborty_Enhancing_Modality-Agnostic_Representations_via_Meta-Learning_for_Brain_Tumor_Segmentation_ICCV_2023_paper.pdf">[paper]</a>
+    <br><a href="https://cse.iitkgp.ac.in/~pabitra/paper/jvcir15.pdf">[paper]</a>
     </p></div>
   </td>
 </tr>
@@ -436,8 +435,8 @@ frequency statistics</strong>
     <div class="publication">
     <p><strong style="color:#65696C;"> Image colourisation using deep feature-guided image retrieval</strong>
     <br><b> Souradeep Chakraborty</b>
-    <br><b><em>IET Image Processing</b>
-    <br><a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Chakraborty_Enhancing_Modality-Agnostic_Representations_via_Meta-Learning_for_Brain_Tumor_Segmentation_ICCV_2023_paper.pdf">[paper]</a>
+    <br><b><em>IET Image Processing, Apr. 2019.</b>
+    <br><a href="https://ietresearch.onlinelibrary.wiley.com/doi/pdfdirect/10.1049/iet-ipr.2018.6169">[paper]</a>
     </p></div>
   </td>
 </tr>
@@ -450,8 +449,8 @@ frequency statistics</strong>
     <div class="publication">
     <p><strong style="color:#65696C;"> Deep image inpainting with region prediction at hierarchical scales</strong>
     <br><b> Souradeep Chakraborty</b>, Jogendra N. Kundu, and R. Venkatesh Babu
-    <br><b><em>ICVGIP 2016</b>
-    <br><a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Chakraborty_Enhancing_Modality-Agnostic_Representations_via_Meta-Learning_for_Brain_Tumor_Segmentation_ICCV_2023_paper.pdf">[paper]</a>
+    <br><b><em>Indian Conference on Computer Vision, Graphics and Image Processing (ICVGIP) 2016</b>
+    <br><a href="https://dl.acm.org/doi/abs/10.1145/3009977.3009992">[paper]</a>
     </p></div>
   </td>
 </tr>
