--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ body {margin:0;height:2000px;}
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Indian Institute of Technology, Kharagpur, India</b></span>
 	
-	  <br><em>M.Tech in Electronics and Electrical Communication Engineering (Specialization: Visual Information Processing and Embedded Systems) </em><br> 
+	  <br><em>M.Tech in Electronics and Electrical Communication Engineering <br> (Specialization: Visual Information Processing and Embedded Systems) </em><br> 
           Aug 2013 - June 2015
 
 	</td></tr></tbody></table>
