--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ frequency statistics</strong>
     <div class="publication">
     <p><strong style="color:#65696C;"> Weighting the factors affecting attention guidance during free viewing and visual search: The unexpected role of object recognition uncertainty</strong>
     <br><b> Souradeep Chakraborty</b>, Gregory Zelinsky, Dimitris Samaras
-    <br><b><em>Journal of vision, 22(4), 13-13.</b>
+    <br><b><em>Journal of vision, 22(4), pp. 13, 2022</b>
     <br><a href="https://jov.arvojournals.org/article.aspx?articleid=2778692">[paper]</a>
     </p></div>
   </td>
