--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@ body {margin:0;height:2000px;}
 
     <p>I am a Research Assistant at the <a href="https://www3.cs.stonybrook.edu/~cvl/">Computer Vision (CV) lab </a> at Stony Brook University under the supervision of <a href="https://www.cs.stonybrook.edu/people/faculty/dimitrissamaras"><b>Prof. Dimitris Samaras</b></a>. </p>
 
-    <p>Prior to joining SBU, I completed Masters degree from UC Santa Barbara, USA and Indian Institute of Technology (IIT) Kharagpur, India in the domain of signal processing. I completed by undergraduate degree from National Institute of Technology (NIT) Durgapur, India in Electronics and Communication Engineering.</p> 
-
     <p> <font color="red"><b>Research Interest:</b></font> My research interests lie in computer vision and machine learning in general. In the recent past, my focus has been on studying and predicting human visual attention. In the recent past, I have worked on predicting human visual attention on different kinds of images including but not limited to natural images, webpages, graphic designs, whole slide images of cancer tissues, etc. 
 	    Currently, I work in the area of digital pathology, with additional interests in the domain of
     self-supervised learning.</p>
 
     <p><font color="red"><b>Coursework:</b></font> Machine Learning, Computer Vision, Data Visualization, Computer Graphics, Algorithms</p>
+
+    <p>Prior to joining Stony Brook University, I completed my Masters degree from UC Santa Barbara, USA and Indian Institute of Technology (IIT) Kharagpur, India in the domain of signal processing. I completed by undergraduate degree from National Institute of Technology (NIT) Durgapur, India in Electronics and Communication Engineering.</p> 
   
   <p>&nbsp;</p>
     <h2>Recent News</h2>
