--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ body {margin:0;height:2000px;}
 
     <p><font color="red"><b>Coursework:</b></font> Machine Learning, Computer Vision, Data Visualization, Computer Graphics, Algorithms</p>
 
-    <p>Prior to joining Stony Brook University, I completed my Masters degree from UC Santa Barbara, USA and Indian Institute of Technology (IIT) Kharagpur, India in the domain of signal processing. I completed by undergraduate degree from National Institute of Technology (NIT) Durgapur, India in Electronics and Communication Engineering.</p> 
+    <p>Prior to joining Stony Brook University, I completed my Masters degree from UC Santa Barbara, USA and IIT Kharagpur, India in the domain of signal processing. I completed by undergraduate degree from NIT Durgapur, India in Electronics and Communication Engineering.</p> 
   
   <p>&nbsp;</p>
     <h2>Recent News</h2>
