--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0033)https://SouradeepChakraborty95.github.io/ -->
+<!-- saved from url=(0033)https://sourachakra.github.io/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=0.5">
  
@@ -36,7 +36,7 @@ ga('send', 'pageview');
 
     
     <title>Souradeep Chakraborty</title>
-	<link rel="icon" type="image/png" href="https://SouradeepChakraborty95.github.io/images/ju.png">
+	<link rel="icon" type="image/png" href="https://sourachakra.github.io/resources/me.png">
     <style>
     h1 { padding : 0; margin : 0; }
     body { padding : 20px 0; font-family : Helvetica; font-size : 20px; background-color:#FFFFFF; <!--background-image : url("images/bg2.png");--> } 
@@ -239,7 +239,7 @@ body {margin:0;height:2000px;}
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>University of California Santa Barbara, USA</b></span>
 	
 	  <br><em> Under <a href="https://engineering.ucsb.edu/people/yon-visell"><b>Prof. Yon Visell</b></a> </em><br> 
-	  Sept 2016 - May 2018 <a href="https://SouradeepChakraborty95.github.io/images/isicert.pdf" style="color: #000000"><b>[Certificate]</b> </a>
+	  Sept 2016 - May 2018 <a href="https://sourachakra.github.io/images/isicert.pdf" style="color: #000000"><b>[Certificate]</b> </a>
 	  
 	</td></tr></tbody></table>
 
@@ -250,7 +250,7 @@ body {margin:0;height:2000px;}
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Indian Institute of Science, Bangalore, India</b></span>
 	
 	  <br><em> Under <a href="https://cds.iisc.ac.in/faculty/venky/"><b>Prof. R. Venkatesh Babu</b></a> </em><br> 
-	  November 2015 - May 2016 <a href="https://SouradeepChakraborty95.github.io/images/isicert.pdf" style="color: #000000"><b>[Certificate]</b> </a>
+	  November 2015 - May 2016 <a href="https://sourachakra.github.io/images/isicert.pdf" style="color: #000000"><b>[Certificate]</b> </a>
 	  
 	</td></tr></tbody></table>
 		 
@@ -261,7 +261,7 @@ body {margin:0;height:2000px;}
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Indian Statistical Institute, Kolkata, India</b></span>
 	
 	  <br><em> Under <a href="https://www.isical.ac.in/~sankar/"><b>Prof. Sankar K. Pal</b></a> </em><br> 
-	  May 2010 - July 2011 <a href="https://SouradeepChakraborty95.github.io/images/isicert.pdf" style="color: #000000"><b>[Certificate]</b> </a>
+	  May 2010 - July 2011 <a href="https://sourachakra.github.io/images/isicert.pdf" style="color: #000000"><b>[Certificate]</b> </a>
 	  
 	</td></tr></tbody></table>
 
@@ -273,7 +273,7 @@ body {margin:0;height:2000px;}
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Indian Institute of Technology Kharagpur, India</b></span>
 	
 	  <br><em>Under <a href="https://scholar.google.com/citations?user=5bXSZPYAAAAJ&hl=en"><b>Prof. Pabitra Mitra</b></a></em><br>
-	  June 2013 - April 2015 <a href="https://SouradeepChakraborty95.github.io/images/iitrcert.pdf" style="color: #000000"><b>[Certificate]</b> </a>
+	  June 2013 - April 2015 <a href="https://sourachakra.github.io/images/iitrcert.pdf" style="color: #000000"><b>[Certificate]</b> </a>
 	</td></tr></tbody></table>
 
   <p></p>
