--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ body {margin:0;height:2000px;}
 	 <div id="container">
 	<table border="0" cellpadding="0" cellspacing="4">
 
-	  <tbody><tr><td valign="top" rowspan="6"><img height="170" border="0" class="img-circle" src="./resources/me.png">
+	  <tbody><tr><td valign="top" rowspan="6"><img height="170" border="0" class="img-circle" src="https://sourachakra.github.io/resources/me.png">
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><h1>Souradeep Chakraborty</h1></span><br>
 	
