--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ body {margin:0;height:2000px;}
 	
   	<table border="0" cellpadding="0" cellspacing="4">
 
-	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/sbu.png">
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/sbu.png">
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Stony Brook University, USA</b></span>
 	
@@ -184,7 +184,7 @@ body {margin:0;height:2000px;}
 
   <table border="0" cellpadding="0" cellspacing="4">
 
-	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/iem.png">
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/ucsb.png">
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>University of California Santa Barbara, USA</b></span>
 	
@@ -195,7 +195,7 @@ body {margin:0;height:2000px;}
 		 
   <table border="0" cellpadding="0" cellspacing="4">
 
-	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/iem.png">
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/IIT_Kharagpur_Logo.svg.png">
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Indian Institute of Technology, Kharagpur, India</b></span>
 	
@@ -206,7 +206,7 @@ body {margin:0;height:2000px;}
 		 
   <table border="0" cellpadding="0" cellspacing="4">
 
-	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/iem.png">
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/nitdgp.png">
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>National Institute of Technology, Durgapur, India</b></span>
 	
@@ -223,7 +223,7 @@ body {margin:0;height:2000px;}
 
 	<table border="0" cellpadding="0" cellspacing="4">
 
-	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/isi.png">
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/sbu.png">
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Stony Brook University, USA</b></span>
 	
@@ -234,7 +234,7 @@ body {margin:0;height:2000px;}
 		 
 	<table border="0" cellpadding="0" cellspacing="4">
 
-	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/isi.png">
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/ucsb.png">
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>University of California Santa Barbara, USA</b></span>
 	
@@ -245,7 +245,7 @@ body {margin:0;height:2000px;}
 
 	<table border="0" cellpadding="0" cellspacing="4">
 
-	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/isi.png">
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/iisc.png">
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Indian Institute of Science, Bangalore, India</b></span>
 	
@@ -256,7 +256,7 @@ body {margin:0;height:2000px;}
 		 
   	<table border="0" cellpadding="0" cellspacing="4">
 
-	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/isi.png">
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/isi.png">
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Indian Statistical Institute, Kolkata, India</b></span>
 	
@@ -268,7 +268,7 @@ body {margin:0;height:2000px;}
 	
 	<table border="0" cellpadding="0" cellspacing="4">
 
-	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/iitr.png">
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/IIT_Kharagpur_Logo.svg.png">
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Indian Institute of Technology Kharagpur, India</b></span>
 	
@@ -284,7 +284,7 @@ body {margin:0;height:2000px;}
 
   <table border="0" cellpadding="0" cellspacing="4">
 
-	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/sri.png">
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/amazon.png">
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Amazon, USA</b></span>
 	
@@ -295,7 +295,7 @@ body {margin:0;height:2000px;}
 		
 	<table border="0" cellpadding="0" cellspacing="4">
 
-	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/roche.jpg">
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/amazon.png">
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Amazon, USA</b></span>
 	
@@ -309,7 +309,7 @@ body {margin:0;height:2000px;}
 		 
   	<table border="0" cellpadding="0" cellspacing="4">
 
-	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/cts.png">
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/cerner.png">
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Cerner Healthcare Pvt. Ltd., India</b></span>
 	
@@ -320,7 +320,7 @@ body {margin:0;height:2000px;}
 
          <table border="0" cellpadding="0" cellspacing="4">
 
-	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="./Souradeep Chakraborty_files/cts.png">
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/samsung.png">
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Samsung Electronics, India</b></span>
 	
@@ -344,7 +344,7 @@ body {margin:0;height:2000px;}
 	   
 <tr>
   <td>
-    <img border="0" src="./Souradeep Chakraborty_files/iccv23.PNG" classs="publogo" height="180" width="200">
+    <img border="0" src="https://sourachakra.github.io/resources/wacv.png" classs="publogo" height="180" width="200">
   </td>
   <td>
     <div class="publication">
@@ -359,7 +359,7 @@ frequency statistics</strong>
 
 <tr>
   <td>
-    <img border="0" src="./Souradeep Chakraborty_files/iccv23.PNG" classs="publogo" height="180" width="200">
+    <img border="0" src="https://sourachakra.github.io/resources/websaliency.png" classs="publogo" height="180" width="200">
   </td>
   <td>
     <div class="publication">
@@ -373,7 +373,7 @@ frequency statistics</strong>
 
 <tr>
   <td>
-    <img border="0" src="./Souradeep Chakraborty_files/iccv23.PNG" classs="publogo" height="180" width="200">
+    <img border="0" src="https://sourachakra.github.io/resources/isbi.png" classs="publogo" height="180" width="200">
   </td>
   <td>
     <div class="publication">
@@ -387,7 +387,7 @@ frequency statistics</strong>
 
 <tr>
   <td>
-    <img border="0" src="./Souradeep Chakraborty_files/iccv23.PNG" classs="publogo" height="180" width="200">
+    <img border="0" src="https://sourachakra.github.io/resources/jov.png" classs="publogo" height="180" width="200">
   </td>
   <td>
     <div class="publication">
@@ -401,7 +401,7 @@ frequency statistics</strong>
 
 <tr>
   <td>
-    <img border="0" src="./Souradeep Chakraborty_files/iccv23.PNG" classs="publogo" height="180" width="200">
+    <img border="0" src="https://sourachakra.github.io/resources/cviu.png" classs="publogo" height="180" width="200">
   </td>
   <td>
     <div class="publication">
@@ -415,7 +415,7 @@ frequency statistics</strong>
 
 <tr>
   <td>
-    <img border="0" src="./Souradeep Chakraborty_files/iccv23.PNG" classs="publogo" height="180" width="200">
+    <img border="0" src="https://sourachakra.github.io/resources/jvcir.png" classs="publogo" height="180" width="200">
   </td>
   <td>
     <div class="publication">
@@ -429,7 +429,7 @@ frequency statistics</strong>
 
 <tr>
   <td>
-    <img border="0" src="./Souradeep Chakraborty_files/iccv23.PNG" classs="publogo" height="180" width="200">
+    <img border="0" src="https://sourachakra.github.io/resources/iet.png" classs="publogo" height="180" width="200">
   </td>
   <td>
     <div class="publication">
@@ -443,7 +443,7 @@ frequency statistics</strong>
 
 <tr>
   <td>
-    <img border="0" src="./Souradeep Chakraborty_files/iccv23.PNG" classs="publogo" height="180" width="200">
+    <img border="0" src="https://sourachakra.github.io/resources/icvgip.png" classs="publogo" height="180" width="200">
   </td>
   <td>
     <div class="publication">
